--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
-    "rome": "^12.1.3"
+    "rome": "^12.1.3",
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
