--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "rome": "^12.1.3",
     "tailwindcss": "^3.3.3"
   },
