--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.52.0",
+    "eslint-plugin-react": "^7.33.2",
     "rome": "^12.1.3",
     "tailwindcss": "^3.3.3"
   },
@@ -34,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tsc --project . && eslint 'src/**/*.{js,jsx,ts,tsx}' && rome check ."
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +55,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "pre-commit": {
+    "run": [
+      "lint"
     ]
   }
 }
