--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "tsc --project . && eslint 'src/**/*.{js,jsx,ts,tsx}' && rome check ."
+    "lint": "tsc --project . && eslint src/**/*.{js,jsx,ts,tsx} && rome check ."
   },
   "eslintConfig": {
     "extends": [
